--- a/index.html
+++ b/index.html
@@ -99,26 +99,26 @@
 <body>
 
 <header>
-  <h1>简易API中转站 - 专业AI API服务平台</h1>
-  <p>免费体验OpenAI、ChatGPT、Claude、DeepSeek等顶级AI模型API</p>
+  <h1>一步API中转站 - 专业AI API服务平台</h1>
+  <p>免费体验OpenAI、ChatGPT、Claude、DeepSeek、Gemini3等顶级AI模型API</p>
   <p>🔥 高并发 | ⚡ 低延迟 | 💯 稳定可靠 | 🌟 成本优化</p>
-  <a href="https://jeniya.cn" target="_blank" class="btn-primary">立即获取API密钥</a>
+  <a href="https://yibuapi.com" target="_blank" class="btn-primary">立即获取API密钥</a>
 </header>
 
 <div class="container">
 
   <section>
-    <h2>【2025最新】简易API中转站 — 为开发者和企业提供稳定、低成本的AI大模型API接口解决方案！</h2>
-    <p>我们是您值得信赖的AI API中转站，提供OpenAI/ChatGPT API、Claude API、DeepSeek API等多种大模型接口服务。无论您是开发AI应用、构建智能产品还是进行AI研究，简易API都能满足您的需求！立即访问我们的官网获取免费API密钥！</p>
+    <h2>【2025最新】一步API中转站 — 为开发者和企业提供稳定、低成本的AI大模型API接口解决方案！</h2>
+    <p>我们是您值得信赖的AI API中转站，提供OpenAI/ChatGPT API、Claude API、DeepSeek、Gemini API等多种大模型接口服务。无论您是开发AI应用、构建智能产品还是进行AI研究，一步API都能满足您的需求！立即访问我们的官网获取免费API密钥！</p>
   </section>
 
   <section>
-    <h2>为什么选择简易API中转站？</h2>
+    <h2>为什么选择一步API中转站？</h2>
     <ul>
       <li>稳定可靠：多节点负载均衡，99.9%可用性保障，告别API请求失败</li>
       <li>成本优化：比官方API更低的调用成本，为您节省50%以上开支</li>
       <li>高并发支持：支持每秒数百次的API调用，满足大规模应用需求</li>
-      <li>简易接入：完全兼容官方API接口，无需修改现有代码，即插即用</li>
+      <li>简单接入：完全兼容官方API接口，无需修改现有代码，即插即用</li>
       <li>全天候技术支持：专业技术团队7x24小时在线，解决您的问题</li>
     </ul>
   </section>
@@ -126,21 +126,22 @@
   <section>
     <h2>【2025年最新】我们提供的热门AI API服务</h2>
     <ul>
-      <li><strong>OpenAI API / ChatGPT API</strong> — 支持GPT-3.5-Turbo、GPT-4、GPT-4o等全系列模型，兼容官方API格式，支持聊天补全、文本补全、嵌入等全部功能。<a href="https://jeniya.cn/openai" target="_blank">了解详情</a></li>
-      <li><strong>Claude API</strong> — 支持Claude Instant、Claude 2、Claude 3 Opus等全系列，超长上下文支持，适合文档分析和复杂任务处理。<a href="https://jeniya.cn/claude" target="_blank">了解详情</a></li>
-      <li><strong>DeepSeek API</strong> — 支持DeepSeek-7B、DeepSeek-67B等高性能开源模型，中英双语优化，代码能力出色，性价比极高。<a href="https://jeniya.cn/deepseek" target="_blank">获取DeepSeek API Key</a></li>
-      <li><strong>免费API测试套餐</strong> — 注册即获5美元免费额度，可测试所有模型API，无需信用卡，简单注册即可开始使用。<a href="https://jeniya.cn/register" target="_blank">立即注册体验</a></li>
+      <li><strong>OpenAI API / ChatGPT API</strong> — 支持GPT-3.5-Turbo、GPT-4、GPT-4o、GPT-5等全系列模型，兼容官方API格式，支持聊天补全、文本补全、嵌入等全部功能。<a href="https://yibuapi.com/pricing" target="_blank">了解详情</a></li>
+      <li><strong>Claude API</strong> — 支持Claude Instant、Claude 2、Claude 3 Opus、Claude 4、Claude 4.5、Claude opus 4.5等全系列，超长上下文支持，适合文档分析和复杂任务处理。<a href="https://yibuapi.com/pricing" target="_blank">了解详情</a></li>
+      <li><strong>DeepSeek API</strong> — 支持DeepSeek-7B、DeepSeek-67B等高性能开源模型，中英双语优化，代码能力出色，性价比极高。<a href="https://yibuapi.com/pricing" target="_blank">获取DeepSeek API Key</a></li>
+      <li><strong>Gemini API</strong> — 支持gemini-3-pro-preview、gemini-2.5-pro、gemini-3-pro-image-preview等全系列模型。十万级并发，价格全球最低<a href="https://yibuapi.com/pricing" target="_blank">Gemini API Key</a></li>
+      <li><strong>免费API测试套餐</strong> — 注册即获5美元免费额度，可测试所有模型API，无需信用卡，简单注册即可开始使用。<a href="https://yibuapi.com" target="_blank">立即注册体验</a></li>
     </ul>
   </section>
 
   <section>
-    <h2>简易API中转站 VS 官方API：全方位对比</h2>
+    <h2>一步API中转站 VS 官方API：全方位对比</h2>
     <table>
       <thead>
         <tr>
           <th>对比项</th>
           <th>官方API直连</th>
-          <th>简易API中转服务</th>
+          <th>一步API中转服务</th>
         </tr>
       </thead>
       <tbody>
@@ -184,11 +185,11 @@
   </section>
 
   <section>
-    <h2>如何使用简易API中转站？</h2>
+    <h2>如何使用一步API中转站？</h2>
     <ol>
-      <li>访问简易API官网 (<a href="https://jeniya.cn" target="_blank">jeniya.cn</a>)</li>
+      <li>访问一步API官网 (<a href="https://yibuapi.com" target="_blank">yibuapi.com</a>)</li>
       <li>注册账号并登录（支持手机号、邮箱或微信登录）</li>
-      <li>在控制台中创建API密钥（支持OpenAI/ChatGPT、Claude、DeepSeek等多种模型）</li>
+      <li>在控制台中创建API密钥（支持OpenAI/ChatGPT、Claude、DeepSeek、Gemini等多种模型）</li>
       <li>充值账户或使用免费额度（新用户赠送5美元测试额度）</li>
       <li>在您的应用中集成API，使用我们提供的SDK或直接调用REST API</li>
     </ol>
@@ -201,8 +202,8 @@
 const { Configuration, OpenAIApi } = require("openai");
 
 const configuration = new Configuration({
-  apiKey: "您的简易API密钥",
-  basePath: "https://api.jeniya.cn/v1", // 替换为简易API端点
+  apiKey: "您的一步API密钥",
+  basePath: "https://yibuapi.com/v1", // 替换为一步API端点
 });
 
 const openai = new OpenAIApi(configuration);
@@ -225,22 +226,22 @@ main();
 
   <section>
     <h2>常见问题</h2>
-    <h3>1. 简易API中转站安全吗？</h3>
+    <h3>1. 一步API中转站安全吗？</h3>
     <p>是的，我们采用企业级安全标准，所有API调用均通过HTTPS加密传输，不存储您的对话内容，确拥有完善的隐私保护政策，受到众多企业客户的信任。</p>
     <h3>2. 如何获取OpenAI API Key或DeepSeek API Key？</h3>
-    <p>通过简易API中转站，您无需直接从官方获取API密钥。只需在我们平台注册账号，即可创建兼容各大AI模型的API密钥，避开官方注册的各种限制和繁琐流程。</p>
+    <p>通过一步API中转站，您无需直接从官方获取API密钥。只需在我们平台注册账号，即可创建兼容各大AI模型的API密钥，避开官方注册的各种限制和繁琐流程。</p>
     <h3>3. API调用费用如何计算？</h3>
     <p>我们采用与官方类似的按token计费方式，但价格更优惠。例如，GPT-4o的调用价格比官方低约40%，Claude API价格比官方低约50%。详细价格请参考我们的价格页面。</p>
     <h3>4. 支持哪些付款方式？</h3>
     <p>我们支持支付宝、微信支付、银行需海外信用卡，为中国用户提供便利。企业客户还可申请对公账户付款和发票服务。</p>
     <h3>5. 如何处理高并发API请求？</h3>
-    <p>简易API采用分布式架构和智能负载均衡技术，可轻松应对高并发场景。标准套餐支持每秒10次调用，企业套餐可提供更高并发支持，满足大规模应用需求。</p>
+    <p>一步API采用分布式架构和智能负载均衡技术，可轻松应对高并发场景。标准套餐支持每秒10次调用，企业套餐可提供更高并发支持，满足大规模应用需求。</p>
   </section>
 
 </div>
 
 <footer>
-  &copy; 2024 简易API中转站 版权所有
+  &copy; 2025 一步API中转站 版权所有
 </footer>
 
 </body>
